# Vulcan

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
agentes/: README.md
ai/api/: pyproject.toml
ai/api/app/: config.py  llm.py  main.py
ai/api/tests/: test_health.py
backend/api/: Dockerfile  pyproject.toml
backend/api/app/: ai_router.py  config.py  data.py  email_channels.py  main.py  notifications.py  repository.py  runtime_config.py  schemas.py  security.py  supabase.py  whatsapp.py  whatsapp_worker.py
backend/api/tests/: test_api.py
docker/: .env.example  compose.yml
docs/: AGENT.md  AGENTS.md  AGENT_DEPLOYMENT.md  AGENT_NOTIFICATIONS.md  AI.md  API.md  ARCHITECTURE.md  BACKEND.md  CHANGELOG.md  COMMAND_CENTER.md  CONFIGURATION.md  CONTRIBUTING.md  DASHBOARD.md  DATABASE.md  DEMO.md  DEPLOY.md  DEVICE_ADOPTION.md  DOCKER.md  EMAIL.md  ERS_ADMIN.md  EXPORTS.md  FINAL_REPORT.md  FRONTEND.md  HIERARCHY.md  INSIGHTS.md  LGPD.md  LINUX_AGENT.md  LOCAL_SETUP.md  MACOS_AGENT.md  METRICS.md  MULTITENANCY.md  NOTIFICATIONS.md  OBSERVABILITY.md  ONBOARDING.md  PRIVACY.md  PROJECT_AUDIT.md  QA.md  README.md  ROADMAP.md  SALES_DEMO.md  (+17 more)
scripts/: apply-phase2-sql.sh  apply-phase3-sql.sh  apply-phase4-sql.sh  apply-phase5-sql.sh  apply-phase6-sql.sh  apply-supabase-migrations.sh  bootstrap.sh  db-down.sh  db-logs.sh  db-reset.sh  db-up.sh  deploy_ers_windows_agent.py  dev.sh  discover_ers_windows_targets.py  docker-common.sh  docker-doctor.sh  docker-down.sh  docker-init-env.sh  docker-logs.sh  docker-status.sh  docker-up.sh  docker-whatsapp-qr.sh  enable-linux-corporate-monitoring.sh  ensure_ers_admin.py  install-evolution-autostart.sh  install_ers_sjp_061_rpc.py  logs-all.sh  logs-vulcan.sh  reset_ers_tenant.py  run-ai-api.sh  run-api.sh  run-daily-metrics-job.sh  run-ingestion-gateway.sh  run-normalization-job.sh  run-operational-facts-job.sh  run-query-api.sh  (+20 more)
services/jobs/: README.md  pyproject.toml
services/jobs/app/: daily_metrics_repository.py  daily_metrics_service.py  normalization_repository.py  run_daily_metrics.py  run_operational_facts.py
services/jobs/tests/: test_daily_metrics.py  test_normalization.py  test_operational_facts.py
services/query-api/: README.md  pyproject.toml
services/query-api/app/: config.py  main.py
(+166 files in other folders)
