[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-api"
version = "0.1.0"
description = "Explainable AI API for structured operational intelligence."
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.116.1",
  "openai==1.109.1",
  "pydantic==2.11.7",
  "uvicorn[standard]==0.35.0"
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "pytest==8.4.1"
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
