[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "query-api"
version = "0.1.0"
description = "Tenant-scoped query API for operational metrics and facts."
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.116.1",
  "pydantic==2.11.7",
  "psycopg[binary]==3.2.9",
  "uvicorn[standard]==0.35.0"
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "pytest==8.4.1"
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

